--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/AnastasiaPanysh/server-mongo#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.3.0"
+    "mongodb": "^5.3.0",
+    "swagger-ui-express": "^4.6.2"
   }
 }
